--- a/packages/ory-hydra-client/package.json
+++ b/packages/ory-hydra-client/package.json
@@ -2,7 +2,8 @@
   "name": "ory-hydra-client",
   "version": "1.3.8",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
+  "type": "module",
   "scripts": {
     "build": "openapi-ts"
   },
@@ -12,5 +13,8 @@
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
     "@hey-api/openapi-ts": "0.81.1"
+  },
+  "peerDependencies": {
+    "typescript": "^5.x"
   }
 }
