--- a/packages/ory-hydra-client/package.json
+++ b/packages/ory-hydra-client/package.json
@@ -5,14 +5,17 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "build": "openapi-ts"
+    "openapi-ts": "openapi-ts",
+    "build": "rolldown -c"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
-    "@hey-api/openapi-ts": "0.81.1"
+    "@hey-api/openapi-ts": "0.81.1",
+    "rolldown": "1.0.0-beta.34",
+    "rolldown-plugin-dts": "^0.15.10"
   },
   "peerDependencies": {
     "typescript": "^5.x"
