--- a/packages/ory-hydra-client/package.json
+++ b/packages/ory-hydra-client/package.json
@@ -12,6 +12,12 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
   "devDependencies": {
     "@hey-api/openapi-ts": "0.81.1",
     "rolldown": "1.0.0-beta.34",
