--- a/packages/ory-hydra-client/package.json
+++ b/packages/ory-hydra-client/package.json
@@ -2,7 +2,7 @@
   "name": "ory-hydra-client",
   "version": "1.3.8",
   "description": "",
-  "main": "index.ts",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "openapi-ts": "openapi-ts",
