--- a/packages/ory-kratos-client/package.json
+++ b/packages/ory-kratos-client/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "openapi-ts": "openapi-ts",
-    "build": "rolldown -c"
+    "build": "rolldown -c",
+    "postinstall": "rolldown -c"
   },
   "keywords": [],
   "author": "",
