Replace postinstall script with prepare in client packages

--- a/packages/ory-hydra-client/package.json
+++ b/packages/ory-hydra-client/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "openapi-ts": "openapi-ts",
     "build": "rolldown -c",
-    "postinstall": "rolldown -c"
+    "prepare": "rolldown -c"
   },
   "keywords": [],
   "author": "",
