Add build job as dependency for publish-gpr

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,6 +17,7 @@ jobs:
       - run: pnpm install --frozen-lockfile
 
   publish-gpr:
+    needs: build
     runs-on: ubuntu-latest
     permissions:
       contents: read
