--- a/packages/ory-hydra-client/package.json
+++ b/packages/ory-hydra-client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ory-hydra-client",
+  "name": "@umbra-ecosystem/ory-hydra-client",
   "version": "1.3.8",
   "description": "",
   "main": "index.js",
